@@ -1,9 +1,9 @@
 package week08d03;
 
-import static org.junit.jupiter.api.Assertions.*;
-import org.junit.jupiter.api.DisplayName;
+
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -12,9 +12,11 @@ class StringListTest {
 
     @Test
     void testListsUnited() {
-        StringList st = new StringList();
-        List<String> result = st.stringListUnion(List.of("a", "b", "c"), List.of("a", "d"));
-        assertEquals("[a, b, c, d]", result.toString());
+        List<String> first = Arrays.asList("a","b","c");
+        List<String> second = Arrays.asList("a", "d");
+        StringList sl = new StringList();
+
+     assertEquals(Arrays.asList("a", "b", "c", "d"), sl.stringListUnion(first, second));
     }
 }
 
